--- a/docs/source/tutorial/Mixtures/ideal_gas.ipynb
+++ b/docs/source/tutorial/Mixtures/ideal_gas.ipynb
@@ -66,19 +66,19 @@
    "source": [
     "The list of methods that an IdealGas have are the following:\n",
     "\n",
-    "Methods inherited from AbstractMix.\n",
-    "- mol_fractions\n",
-    "- mixture_molecular_weight\n",
-    "- partial_pressures\n",
-    "- molar_density\n",
-    "- mass_density\n",
+    "Methods inherited from AbstractMix.  \n",
+    "- mol_fractions  \n",
+    "- mixture_molecular_weight  \n",
+    "- partial_pressures  \n",
+    "- molar_density  \n",
+    "- mass_density  \n",
     "\n",
-    "Methods implemented by IdealGas.\n",
-    "- volume\n",
-    "- concentrations\n",
-    "- mix_heat_capacity\n",
-    "- formation_enthalpies_correction\n",
-    "- mixture_viscosity\n",
+    "Methods implemented by IdealGas.  \n",
+    "- volume  \n",
+    "- concentrations  \n",
+    "- mix_heat_capacity  \n",
+    "- formation_enthalpies_correction  \n",
+    "- mixture_viscosity  \n",
     "\n",
     "The methods inherited from AbstractMix are explained in the [AbstractMix tutorial](abstract_mix.ipynb). On the other hand, each method implemented by IdealGas \n",
     "may require that the substances have specific attributes or methods defined. "
@@ -302,12 +302,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3db6692755cc9a0f1f384d2bf82ee8ea60abce7e756c1c394928c990a009cced"
+    "hash": "44eb91f73ea2661bbbecc9f77111c56822635f905b8a2c5d2c14405903be0d49"
    }
   }
  },
