--- a/docs/source/tutorial/Mixtures/ideal_solution.ipynb
+++ b/docs/source/tutorial/Mixtures/ideal_solution.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ideal solution objects"
+    "## Ideal solution"
    ]
   },
   {
@@ -78,21 +78,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The IdealSolution class is an instance of the abstract class AbstractMix. As a consequence, it has methods that are common to all the instances of AbstractMix:\n",
+    "The IdealSolution class is an instance of the abstract class AbstractMix. As a consequence, it has methods that are common to all the instances of AbstractMix:  \n",
     "\n",
-    "- mol_fractions\n",
-    "- mixture_molecular_weight\n",
-    "- partial_pressures\n",
-    "- molar_density\n",
-    "- mass_density\n",
+    "- mol_fractions  \n",
+    "- mixture_molecular_weight  \n",
+    "- partial_pressures  \n",
+    "- molar_density  \n",
+    "- mass_density  \n",
     "\n",
-    "and IdealSolution specific methods:\n",
-    "\n",
-    "- concentrations\n",
-    "- volume\n",
-    "- mix_heat_capacity\n",
-    "- formation_enthalpies_correction\n",
-    "- mixture_viscosity"
+    "and IdealSolution specific methods:  \n",
+    "- concentrations  \n",
+    "- volume  \n",
+    "- mix_heat_capacity  \n",
+    "- formation_enthalpies_correction  \n",
+    "- mixture_viscosity  "
    ]
   },
   {
@@ -273,12 +272,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0da960acde017608603fcb155815528bc626e42a5841520214e4e02be5770591"
+    "hash": "44eb91f73ea2661bbbecc9f77111c56822635f905b8a2c5d2c14405903be0d49"
    }
   }
  },
