--- a/docs/source/tutorial/Mixtures/ideal_gas.ipynb
+++ b/docs/source/tutorial/Mixtures/ideal_gas.ipynb
@@ -5,8 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ideal Gas\n",
-    "\n",
+    "## Ideal Gas"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To generate a mixture, first it is necessary to create the Substance objects \n",
     "that will be in the mixture. This could be defined by the user or with the\n",
     "Thermo library. For instance:"
