presentation and style

--- a/docs/source/tutorial/Mixtures/ideal_gas.ipynb
+++ b/docs/source/tutorial/Mixtures/ideal_gas.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "volume = gas_mixture.volume([5, 10, 15, 20], 700, 101325)\n",
     "\n",
-    "print(fr\"{volume} m³\")"
+    "print(rf\"{volume} m³\")"
    ]
   },
   {
@@ -158,7 +158,7 @@
    "source": [
     "concentrations = gas_mixture.concentrations([5, 10, 15, 20], 700, 101325)\n",
     "\n",
-    "print(fr\"{concentrations} mol/m³\")"
+    "print(rf\"{concentrations} mol/m³\")"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "source": [
     "heat_capacity = gas_mixture.mix_heat_capacity([5, 10, 15, 20], 700, 101325)\n",
     "\n",
-    "print(fr\"{heat_capacity} J/mol/K\")"
+    "print(rf\"{heat_capacity} J/mol/K\")"
    ]
   },
   {
@@ -247,10 +247,10 @@
     "formation_enthalpies = gas_mixture.formation_enthalpies_correction(700, 101325)\n",
     "\n",
     "print(\"Ideal Gas formation Enthalpies:\")\n",
-    "print(fr\"{ideal_gas_std_formation_enthalpies} J/mol/K\")\n",
+    "print(rf\"{ideal_gas_std_formation_enthalpies} J/mol/K\")\n",
     "\n",
     "print(\"Corrected formation Enthalpies:\")\n",
-    "print(fr\"{formation_enthalpies} J/mol/K\")"
+    "print(rf\"{formation_enthalpies} J/mol/K\")"
    ]
   },
   {
@@ -288,7 +288,7 @@
    "source": [
     "viscosity = gas_mixture.mixture_viscosity([5, 10, 15, 20], 700, 101325)\n",
     "\n",
-    "print(fr\"{viscosity} Pa s\")"
+    "print(rf\"{viscosity} Pa s\")"
    ]
   }
  ],
