working on tutorial

--- a/docs/source/tutorial/mix/ideal_solution.ipynb
+++ b/docs/source/tutorial/mix/ideal_solution.ipynb
@@ -78,20 +78,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The IdealSolution class is an instance of the abstract class AbstractMix. As a consequence, it has methods that are common to all the instances of AbstractMix:  \n",
-    "\n",
-    "- mol_fractions  \n",
-    "- mixture_molecular_weight  \n",
-    "- partial_pressures  \n",
-    "- molar_density  \n",
-    "- mass_density  \n",
+    "The IdealSolution class is an instance of the abstract class AbstractMix. As a consequence, it has methods that are common to all the instances of \n",
+    "AbstractMix:  \n",
+    "    - mol_fractions  \n",
+    "    - mixture_molecular_weight  \n",
+    "    - partial_pressures  \n",
+    "    - molar_density  \n",
+    "    - mass_density  \n",
     "\n",
     "and IdealSolution specific methods:  \n",
-    "- concentrations  \n",
-    "- volume  \n",
-    "- mix_heat_capacity  \n",
-    "- formation_enthalpies_correction  \n",
-    "- mixture_viscosity  "
+    "    - concentrations  \n",
+    "    - volume  \n",
+    "    - mix_heat_capacity  \n",
+    "    - formation_enthalpies_correction  \n",
+    "    - mixture_viscosity  "
    ]
   },
   {
@@ -109,7 +109,7 @@
    "source": [
     "__concentrations (moles, temperature, pressure)__\n",
     "\n",
-    "This method recieves the moles of each substance, the temperature [K] and pressure [Pa] and returns the concentration of each substance $C_i$ [$moles/m^3$]. The calculation is made by dividing each molar fraction $z_i$ by the total molar volume $V_T$:\n",
+    "This method recieves the moles of each substance, the temperature [K] and pressure [Pa] and returns the concentration of each substance $C_i$ $[\\frac {mol}{m^3}]$. The calculation is made by dividing each molar fraction $z_i$ by the total molar volume $V_T$:\n",
     "\n",
     "$$ C_i = \\frac {z_i} {V_T} $$\n"
    ]
@@ -144,9 +144,9 @@
    "source": [
     "__volume (moles, temperature, pressure)__\n",
     "\n",
-    "This method recieves the moles of each substance, the temperature [K] and pressure [Pa] and returns the volume of the mixture [$m^3$]. The calculation is done by the dot product of the substance's molar volumes $v_i$ and the moles $n_i$:\n",
+    "This method recieves the moles of each substance, the temperature [K] and pressure [Pa] and returns the volume of the mixture $[m^3]$. The calculation is done by the dot product of the substance's molar volumes $v_i$ and the moles $n_i$:\n",
     "\n",
-    "$$ V = v_i · n_i"
+    "$$ V = v_i · n_i $$"
    ]
   },
   {
@@ -174,10 +174,15 @@
    "source": [
     "__mix_heat_capacity (moles, temperature, pressure)__\n",
     "\n",
-    "This method recieves the moles of each substance, the temperature [K] and pressure [Pa] and returns the heat capacity of the mixture [$J/K$]. \n",
-    "The calculation is performed by the dot product between the molar fractions $z_i$ and the ${c_p}_i$ of the compounds:\n",
+    "The mix_heat_capacity method recieves the moles [mol], temperature [K] and \n",
+    "pressure [Pa] and returns the mix's heat capacity $[\\frac{J}{molK}]$. **The \n",
+    "method requires that each substance have the liquid heat capacity method \n",
+    "(${C_{p}}_{i}$) defined**. The mixture's heat capacity is calculated from the \n",
+    "mole fractions and the pure ideal gas heat capacity of each substance:\n",
     "\n",
-    "$$ {C_p}_{mix} = z_i · {C_p}_i"
+    "$${C_{p}}_{mix} = \\sum z_{i} {C_{p}}_{i}$$\n",
+    "\n",
+    "The method is used by non isothermal reactors."
    ]
   },
   {
