working on PFR tutorial

--- a/docs/source/tutorial/mix/ideal_gas.ipynb
+++ b/docs/source/tutorial/mix/ideal_gas.ipynb
@@ -171,7 +171,7 @@
     "The mix_heat_capacity method recieves the moles [mol], temperature [K] and \n",
     "pressure [Pa] and returns the mix's heat capacity [J/mol/K]. **The method \n",
     "requires that each substance have the ideal gas heat capacity method \n",
-    "(${C_{p}}_{i}$) defined**. The mixture's heat capacity is calculated from the \n",
+    "defined**. The mixture's heat capacity is calculated from the \n",
     "mole fractions and the pure ideal gas heat capacity of each substance:\n",
     "\n",
     "$${C_{p}}_{mix} = \\sum z_{i} {C_{p}}_{i}$$\n",
@@ -208,8 +208,8 @@
     "The formation_enthalpies_correction method recieves the temperature [K] and \n",
     "pressure [Pa] and returns the enthalpy of formation of each substance [J/mol/K]\n",
     "at the specified temperature and pressure. **The method requires that each \n",
-    "substance have the ideal gas heat capacity (${{C_{p}}_{i}}_{(T,P)}$) method and \n",
-    "the ideal gas enthalpy of formation (${\\Delta_{f}H_{i}^{298.15}}$) defined**.\n",
+    "substance have the ideal gas heat capacity method and \n",
+    "the ideal gas enthalpy of formation defined**.\n",
     "\n",
     "The corrected formation enthalpy of a substance is:\n",
     "$${\\Delta_{f}H}_{i} = {\\Delta_{f}H_{i}^{298.15}} + \\int_{298.15}^{T}{{C_{p}}_{i}}_{(T,P)}dT$$\n",
@@ -263,7 +263,7 @@
     "The mixture_viscosity method recieves the moles[mol], temperature [K] and \n",
     "pressure [Pa] and returns the mixture's viscocity [Pa s] at the specified \n",
     "temperature and pressure. **The method requires that each \n",
-    "substance have the gas viscocity ($\\mu_{i}$) and molecular weight ($Mw_{i}$) \n",
+    "substance have the gas viscocity and molecular weight \n",
     "defined**. For the calculation, the Herning_Zipperer method from the Thermo \n",
     "library is used.\n",
     "\n",
@@ -313,7 +313,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "44eb91f73ea2661bbbecc9f77111c56822635f905b8a2c5d2c14405903be0d49"
+    "hash": "3db6692755cc9a0f1f384d2bf82ee8ea60abce7e756c1c394928c990a009cced"
    }
   }
  },
