--- a/docs/source/tutorial/mix/ideal_solution.ipynb
+++ b/docs/source/tutorial/mix/ideal_solution.ipynb
@@ -146,7 +146,7 @@
     "\n",
     "This method recieves the moles of each substance, the temperature [K] and pressure [Pa] and returns the volume of the mixture $[m^3]$. The calculation is done by the dot product of the substance's molar volumes $v_i$ and the moles $n_i$:\n",
     "\n",
-    "$$ V = v_i · n_i $$"
+    "$$ V = \\sum v_i · n_i $$"
    ]
   },
   {
@@ -177,7 +177,7 @@
     "The mix_heat_capacity method recieves the moles [mol], temperature [K] and \n",
     "pressure [Pa] and returns the mix's heat capacity $[\\frac{J}{molK}]$. **The \n",
     "method requires that each substance have the liquid heat capacity method \n",
-    "(${C_{p}}_{i}$) defined**. The mixture's heat capacity is calculated from the \n",
+    "defined**. The mixture's heat capacity is calculated from the \n",
     "mole fractions and the pure ideal gas heat capacity of each substance:\n",
     "\n",
     "$${C_{p}}_{mix} = \\sum z_{i} {C_{p}}_{i}$$\n",
@@ -213,14 +213,13 @@
    "source": [
     "__formation_enthalpies_correction (moles, temperature, pressure)__\n",
     "\n",
-    "This method recieves the moles of each substance, the temperature [K] and pressure [Pa] and returns a term to correct the formation enthalpies [$J/mol/K$] of the components of the mixture at the given temperature. The formula to calculate the corrected formation enthalpies is:\n",
+    "This method recieves the moles of each substance, the temperature [K] and pressure [Pa] and returns a term to correct the formation enthalpies [$\\frac {J} {molK}$] of the components of the mixture at the given temperature. The formula to calculate the corrected formation enthalpies is:\n",
     "\n",
     "$${\\Delta H_{f}}_{i} = {\\Delta H_{i}^{298.15}} + \\int_{298.15}^{T}{{C_p}_{i}}{(T,P)}dT$$\n",
     "\n",
     "this method evaluates and solve the integral term. It also takes into account the heat required to melt a substance, if its boiling point is higher than 298.15 K.\n",
     "\n",
-    "The formation enthalpy at non-standard conditions is calculated by adding the standard formation enthalpy and the correction term.\n",
-    "The standard formation enthalpies are set using the private method _formation_enthalpies_set() as shown below:"
+    "The formation enthalpy at non-standard conditions is calculated by adding the standard formation enthalpy and the correction term."
    ]
   },
   {
@@ -282,7 +281,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "44eb91f73ea2661bbbecc9f77111c56822635f905b8a2c5d2c14405903be0d49"
+    "hash": "3db6692755cc9a0f1f384d2bf82ee8ea60abce7e756c1c394928c990a009cced"
    }
   }
  },
