--- a/docs/presentation/presentation.ipynb
+++ b/docs/presentation/presentation.ipynb
@@ -523,8 +523,20 @@
     "\n",
     "# PLoting\n",
     "fig1, ax1 = plt.subplots(1)\n",
-    "ax1.plot(reactor_length, dependent_variables[0], \"-r\", label=\"cis-2-butene\", linewidth=3,)\n",
-    "ax1.plot(reactor_length, dependent_variables[1], \"-g\", label=\"trans-2-butene\", linewidth=3,)\n",
+    "ax1.plot(\n",
+    "    reactor_length,\n",
+    "    dependent_variables[0],\n",
+    "    \"-r\",\n",
+    "    label=\"cis-2-butene\",\n",
+    "    linewidth=3,\n",
+    ")\n",
+    "ax1.plot(\n",
+    "    reactor_length,\n",
+    "    dependent_variables[1],\n",
+    "    \"-g\",\n",
+    "    label=\"trans-2-butene\",\n",
+    "    linewidth=3,\n",
+    ")\n",
     "ax1.set_xlabel(r\"Reactor volume [$m^{3}$]\", fontsize=10)\n",
     "ax1.set_ylabel(\"molar fluxes [mol/s]\", fontsize=10)\n",
     "\n",
