--- a/docs/source/tutorial/ideal_reactor/stationary_pfr.ipynb
+++ b/docs/source/tutorial/ideal_reactor/stationary_pfr.ipynb
@@ -90,7 +90,7 @@
     "| reaction 2 \t|  0 \t| -2 \t|  0 \t|  0 \t|  1 \t|  0 \t|\n",
     "| reaction 3 \t| -2 \t|  0 \t|  0 \t|  0 \t| -1 \t|  3 \t|\n",
     "\n",
-    "For ReactorD the matrix is loaded from a numpy matrix:\n",
+    "For ReactorD the matrix is set from a NumPy matrix:\n",
     "\n",
     "```python\n",
     "stoichiometry = np.array(\n",
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example: P1.15a Fogler's 4th ed.\n",
+    "### Example: P1.15a Fogler's 4th ed.\n",
     "\n",
     "Reaction:\n",
     "\n",
@@ -371,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
