--- a/docs/presentation/presentation.ipynb
+++ b/docs/presentation/presentation.ipynb
@@ -34,8 +34,6 @@
     " - Salvador Brandolin\n",
     " - Adrian Parodi\n",
     " - Maricel Santos\n",
-    " - José Scilipoti\n",
-    " - Juan Pablo Rovezzi\n",
     "\n",
     "**Profesores:**\n",
     " - Juan Bautista Cabral\n",
@@ -332,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -357,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -382,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -406,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -436,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -470,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -499,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -584,6 +582,19 @@
     "- Ampliar el tipo de operaciones para PFR\n",
     "- Agregar reactor tipo mezcla perfecta\n",
     "- Ampliar resolucion de reactores heterogeneos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#  <p style=\"text-align: center;\">¡Gracias por la atención!</p>\n",
+    "\n",
+    "###  <p style=\"text-align: center;\">¿Preguntas?</p>"
    ]
   }
  ],
