--- a/docs/presentation/presentation.ipynb
+++ b/docs/presentation/presentation.ipynb
@@ -196,7 +196,7 @@
     "\n",
     "#### Operacion Continua Homogenea Adiabatica Isobarica\n",
     "\n",
-    "$$ \\frac{dT}{dV} = \\frac{\\sum r_{ji}\\\\\\Delta H_{Ri} }{\\sum F_{j} {C_p}_j } $$\n",
+    "$$ \\frac{dT}{dV} = \\frac{\\sum r_{ji} \\Delta H_{Ri}} {{\\sum F_{j} {C_p}_j }} $$\n",
     "\n",
     "#### Operacion Continua Homogenea Isotermica No Isobarica\n",
     "\n",
@@ -232,11 +232,10 @@
    },
    "source": [
     "Un reactor puede ser operado en variedad de condiciones lo que afecta el modelo matemático que lo describe. Además, ReactorD  permite encontrar soluciones para problemas de valor inicial y/o borde segun los datos iniciales que provea el usuario. \n",
-    "Esto produce un problema con alto grado de acoplamiento. Por lo cual, se utilizó el patron \"Strategy\"  \n",
+    "Esto produce un problema con alto grado de acoplamiento.\n",
     "\n",
     "Librerias utilizadas: \n",
     "- SciPy: ecuaciones algebraicas y diferenciales ordinarias\n",
-    "- py-pde: ecuaciones diferenciales parciales. \n",
     "- Thermo: constantes y correlaciones para propiedades de una amplia base de datos de sustancias. \n",
     "\n",
     "Input necesarios: \n",
@@ -497,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
