Ergun not working need fix

--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -30,9 +30,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = rd.Substance.from_thermo_database(name=\"methane\", thermo_identification=\"methane\")\n",
-    "b = rd.Substance.from_thermo_database(name=\"ethane\", thermo_identification=\"ethane\")\n",
-    "c = rd.Substance.from_thermo_database(name=\"hydrogen\", thermo_identification=\"hydrogen\")"
+    "a = rd.Substance.from_thermo_database(\n",
+    "    name=\"methane\", thermo_identification=\"methane\"\n",
+    ")\n",
+    "b = rd.Substance.from_thermo_database(\n",
+    "    name=\"ethane\", thermo_identification=\"ethane\"\n",
+    ")\n",
+    "c = rd.Substance.from_thermo_database(\n",
+    "    name=\"hydrogen\", thermo_identification=\"hydrogen\"\n",
+    ")"
    ]
   },
   {
@@ -72,6 +78,7 @@
     "    ra = 0.05 * concentrations[0]\n",
     "    return ra\n",
     "\n",
+    "\n",
     "stoichiometry = np.array([-2, 1, 1])\n",
     "\n",
     "kinetic = rd.Kinetics(mix, [ra], stoichiometry)"
@@ -94,7 +101,7 @@
    "source": [
     "mb = pfr.mass_balances.MolarFlow(\n",
     "    molar_flows_in={\"methane\": 0.01, \"ethane\": 0, \"hydrogen\": 0},\n",
-    "    molar_flows_out={}\n",
+    "    molar_flows_out={},\n",
     ")\n",
     "\n",
     "eb = pfr.energy_balances.Isothermic(400)\n",
@@ -118,14 +125,14 @@
    "outputs": [],
    "source": [
     "reactor1 = pfr.PFR(\n",
-    "    mix = mix,\n",
-    "    kinetics = kinetic,\n",
-    "    reactor_length = 0.02,\n",
-    "    transversal_area = 0.05,\n",
+    "    mix=mix,\n",
+    "    kinetics=kinetic,\n",
+    "    reactor_length=0.02,\n",
+    "    transversal_area=0.05,\n",
     "    grid_size=100,\n",
     "    mass_balance=mb,\n",
     "    energy_balance=eb,\n",
-    "    pressure_balance=pb\n",
+    "    pressure_balance=pb,\n",
     ")"
    ]
   },
@@ -265,14 +272,14 @@
    "outputs": [],
    "source": [
     "reactor1 = pfr.PFR(\n",
-    "    mix = mix,\n",
-    "    kinetics = kinetic,\n",
-    "    reactor_length = 0.02,\n",
-    "    transversal_area = 0.05,\n",
+    "    mix=mix,\n",
+    "    kinetics=kinetic,\n",
+    "    reactor_length=0.02,\n",
+    "    transversal_area=0.05,\n",
     "    grid_size=100,\n",
     "    mass_balance=mb,\n",
     "    energy_balance=eb,\n",
-    "    pressure_balance=pb\n",
+    "    pressure_balance=pb,\n",
     ")"
    ]
   },
@@ -293,7 +300,7 @@
     }
    ],
    "source": [
-    "reactor1.simulate(tol = 0.001, max_nodes = 100, verbose = 1)"
+    "reactor1.simulate(tol=0.001, max_nodes=100, verbose=1)"
    ]
   },
   {
@@ -480,25 +487,24 @@
    "source": [
     "mb = pfr.mass_balances.MolarFlow(\n",
     "    molar_flows_in={\"methane\": 0.01, \"ethane\": 0, \"hydrogen\": 0},\n",
-    "    molar_flows_out={}\n",
+    "    molar_flows_out={},\n",
     ")\n",
     "\n",
     "eb = pfr.energy_balances.Isothermic(400)\n",
     "\n",
     "pb = pfr.pressure_balances.Ergun(\n",
-    "    pressure = {\"in\": 1_000_000}, \n",
-    "    porosity = 0.05, \n",
-    "    particle_diameter = 0.001)\n",
+    "    pressure={\"in\": 1_000_000}, porosity=0.05, particle_diameter=0.001\n",
+    ")\n",
     "\n",
     "reactor2 = pfr.PFR(\n",
-    "    mix = mix,\n",
-    "    kinetics = kinetic,\n",
-    "    reactor_length = 0.02,\n",
-    "    transversal_area = 0.05,\n",
+    "    mix=mix,\n",
+    "    kinetics=kinetic,\n",
+    "    reactor_length=0.02,\n",
+    "    transversal_area=0.05,\n",
     "    grid_size=100,\n",
     "    mass_balance=mb,\n",
     "    energy_balance=eb,\n",
-    "    pressure_balance=pb\n",
+    "    pressure_balance=pb,\n",
     ")"
    ]
   },
@@ -599,7 +605,7 @@
     }
    ],
    "source": [
-    "reactor2.simulate(tol = 0.001, max_nodes = 1000, verbose = 1)"
+    "reactor2.simulate(tol=0.001, max_nodes=1000, verbose=1)"
    ]
   },
   {
