--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -807,6 +807,103 @@
     "\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8fca9e57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "21c107c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = np.array(\n",
+    "    [\n",
+    "        [1,2,3,4,5],\n",
+    "        [1,2,3,4,5],\n",
+    "        [1,2,3,4,5],\n",
+    "        [1,2,3,4,5],\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "d = {\"a\": 0, \"b\": 1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5f453565",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "218 ns ± 5.22 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "m[0]\n",
+    "m[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f318fcbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256 ns ± 1.35 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "try:\n",
+    "    m[d[\"a\"]]\n",
+    "    m[d[\"b\"]]\n",
+    "except KeyError:\n",
+    "    print(\"tu mama\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5e93f804",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n",
+      "hola 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {\"a\": 1}\n",
+    "try:\n",
+    "    a[\"b\"]\n",
+    "except ZeroDivisionError:\n",
+    "    raise ZeroDivisionError(\"\")\n",
+    "    \n",
+    "print(\"hola 2\")"
+   ]
   }
  ],
  "metadata": {
