--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -839,70 +839,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5f453565",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "218 ns ± 5.22 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%timeit\n",
-    "m[0]\n",
-    "m[1]"
+    "import reactord as rd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f318fcbb",
+   "execution_count": 2,
+   "id": "be350137",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "256 ns ± 1.35 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%timeit\n",
-    "try:\n",
-    "    m[d[\"a\"]]\n",
-    "    m[d[\"b\"]]\n",
-    "except KeyError:\n",
-    "    print(\"tu mama\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "5e93f804",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hola\n",
-      "hola 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = {\"a\": 1}\n",
-    "try:\n",
-    "    a[\"b\"]\n",
-    "except ZeroDivisionError:\n",
-    "    raise ZeroDivisionError(\"\")\n",
+    "a = rd.Substance.from_thermo_database(\"CH_4\", \"methane\")\n",
+    "b = rd.Substance.from_thermo_database(\"O_2\", \"oxygen\")\n",
+    "c = rd.Substance.from_thermo_database(\"CO_2\", \"carbon dioxide\")\n",
+    "d = rd.Substance.from_thermo_database(\"CO\", \"carbon monoxide\")\n",
+    "e = rd.Substance.from_thermo_database(\"H_{2}O\", \"water\")\n",
+    "\n",
+    "mix = rd.mix.IdealGas([a,b,c,d,e])\n",
+    "\n",
+    "def rate_r1(c, t, **constants):\n",
+    "    a, b = constants.get(\"a\"), constants.get(\"b\")\n",
+    "    ...\n",
     "    \n",
-    "print(\"hola 2\")"
+    "def rate_r2():\n",
+    "    ...\n",
+    "\n",
+    "kinetic = rd.kinetic.Kinetic(\n",
+    "    mix,\n",
+    "    {\n",
+    "        \"r1\": {\n",
+    "            \"eq\": a + 2 * b > c + 2 * e,\n",
+    "            \"rate\": rate_r1\n",
+    "        },\n",
+    "        \"r2\": {\n",
+    "            \"eq\": a + 3 / 2 * b > d + 2 * e,\n",
+    "            \"rate\": rate_r2\n",
+    "        }\n",
+    "    },\n",
+    "    kinetic_constants = {}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "62574c56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1. , -2. ,  1. ,  0. ,  2. ],\n",
+       "       [-1. , -1.5,  0. ,  1. ,  2. ]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kinetic.stoichiometry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "baa03396",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle r1: CH_{4} + 2 O_{2} \\rightarrow CO_{2} + 2 H_{2}O$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle r2: CH_{4} + 1.5 O_{2} \\rightarrow CO + 2 H_{2}O$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "kinetic.irepr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7db5a682",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Mixture's substances: \n",
+       "  * CH_4 \n",
+       "  * O_2 \n",
+       "  * CO_2 \n",
+       "  * CO \n",
+       "  * H_{2}O \n",
+       "\n",
+       "System's reactions: \n",
+       "r1: CH_{4} + 2 O_{2} \\rightarrow CO_{2} + 2 H_{2}O \n",
+       "r2: CH_{4} + 1.5 O_{2} \\rightarrow CO + 2 H_{2}O "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kinetic"
    ]
   }
  ],
